# ChangeLog for sys-apps/attr
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.172 2014/07/13 20:30:00 tgall Exp $

  13 Jul 2014;  <tgall@gentoo.org> attr-2.4.47-r1.ebuild:
  arm64 stable, bug #474296

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org> attr-2.4.47-r1.ebuild:
  Stable for alpha, wrt bug #474296

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> attr-2.4.47-r1.ebuild:
  Stable for ppc64, wrt bug #474296

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> attr-2.4.47-r1.ebuild:
  Stable for sparc, wrt bug #474296

  23 Feb 2014; Agostino Sarubbo <ago@gentoo.org> attr-2.4.47-r1.ebuild:
  Stable for ppc, wrt bug #474296

  22 Feb 2014; Agostino Sarubbo <ago@gentoo.org> attr-2.4.47-r1.ebuild:
  Stable for x86, wrt bug #474296

  15 Feb 2014; Chema Alonso <nimiux@gentoo.org> attr-2.4.47-r1.ebuild:
  Stable for amd64 wrt bug #474296

  14 Feb 2014; Markus Meier <maekke@gentoo.org> attr-2.4.47-r1.ebuild:
  arm stable, bug #474296

  11 Feb 2014; Akinori Hattori <hattya@gentoo.org> attr-2.4.47-r1.ebuild:
  ia64 stable wrt bug #474296

  08 Feb 2014; Jeroen Roovers <jer@gentoo.org> attr-2.4.47-r1.ebuild:
  Stable for HPPA (bug #474296).

  17 Jan 2014; Mike Frysinger <vapier@gentoo.org> attr-2.4.46-r2.ebuild,
  attr-2.4.47-r1.ebuild:
  Add arm64 keywords.

  07 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> -attr-2.4.43.ebuild,
  -attr-2.4.44.ebuild, -attr-2.4.44-r1.ebuild, -attr-2.4.46.ebuild,
  -attr-2.4.46-r1.ebuild, -attr-2.4.47.ebuild,
  -files/attr-2.4.24-only-symlink-when-needed.patch,
  -files/attr-2.4.39-gettext.patch, -files/attr-2.4.43-linguas.patch,
  -files/attr-2.4.44-headers.patch:
  Removed old versions and files.

  24 Nov 2013; Michał Górny <mgorny@gentoo.org> attr-2.4.47-r1.ebuild:
  Clean up manpages in the same code path as they are installed, bug #485494.

  14 Oct 2013; Michał Górny <mgorny@gentoo.org> attr-2.4.47-r1.ebuild: